--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Webpage Title -->
-    <title>Sync - Free Mobile App Landing Page HTML Template</title>
+    <title>iCPNS - Mobile App</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h1>Mobile App Landing Page</h1>
+                        <h1>iCPNS Mobile App</h1>
                         <p class="p-large p-heading">Start focusing on your goals and get more things done with Sync mobile application. It's the first app to harness the power of social connections to help you stay focused and get organized</p>
                         <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a>
                         <a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>DOWNLOAD</a>
@@ -836,7 +836,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Sync - Free Mobile App Landing Page HTML Template by <a href="https://landingrepo.com">Landingrepo</a></p>
+                    <p class="p-small">Copyright © iCPNS - Mobile App [Template by <a href="https://landingrepo.com">Landingrepo]</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
