--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -128,57 +128,36 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="text-container dark">
-                        <h3>Limitations Of Liability</h3>
-                        <p>Sync also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies. For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access.</p>
-                        <p>When you first register for a Sync account, and when you use the we collect some <a href="#your-link">Personal Information</a> about you such as:</p>
-                        <ul class="list-unstyled li-space-lg">
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">The geographic area where you use your computer and mobile devices should be the same with the one on the receipt</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Your full name, username, and email address and other contact details must be provided using the dedicated form</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">A unique Sync user ID (an alphanumeric string) which is assigned to you upon registration and session</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Other optional information as part of your account profile are not required and you should not mention them</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Your IP Address and, when applicable, timestamp related to your consent and confirmation of consent are mandatory</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Other information submitted by you or your organizational representatives via various methods is not taken into</div>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                    
                     <div class="text-container">
                         <h3>Terms And Conditions</h3>
-                        <p>Under no circumstances shall Sync be liable for any direct, indirect, special, incidental or consequential damages, including, but not limited to, loss of data or profit, arising out of the use, or the inability to use, the materials on this site, even if Sync or an authorized representative has been advised of the possibility of such damages. If your use of materials from this site results in the need for servicing, repair or correction of equipment or data, you assume any costs thereof should only be provided by the user of the application.</p>
+                        <p>By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to DevaPubs.</p>
+
+                        <p>DevaPubs is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.</p>
+
+                        <p>The iCPNS app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the iCPNS app won’t work properly or at all.</p>
+
+                        <p>You should be aware that there are certain things that DevaPubs will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but DevaPubs cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.</p>
+
+                        <p>If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.</p>
+
+                        <p>Along the same lines, DevaPubs cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, DevaPubs cannot accept responsibility.</p>
+
+                        <p>With respect to DevaPubs’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. DevaPubs accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.</p>
+
+                        <p>At some point, we may wish to update the app. The app is currently available on Android – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. DevaPubs does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.</p>
                     </div> <!-- end of text-container -->
 
                     <div class="text-container">
-                        <h3>License Types & Template Usage</h3>
-                        <p>All our templates inherit the GNU general public license from HTML. All .PSD & CSS files are packaged separately and are not licensed under the GPL 2.0. Instead, these files inherit Sync Personal Use License. These files are given to all Clients on a personal use basis. You may not offer them, <a href="#your-link">modified or unmodified</a>, for redistribution or resale of any kind. You can’t use one of our themes on a HTML domain. More on HTML Vs CSS, you can read here. You can use our templates do develop sites for your clients and also for a limited amount.</p>
-                        <p>Services help our customers promote their products and services, marketing and advertising; engaging audiences; scheduling and publishing messages; and analyze the results are always measured better with a dedicated analytics tool.</p>
+                        <h3>Changes to This Terms and Conditions</h3>
+                        <p>I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.</p>
                     </div> <!-- end of text-container -->
 
                     <div class="text-container">
-                        <h3>Designer Membership And How It Applies</h3>
-                        <p>By using any of the Services, or submitting or collecting any Personal Information via the Services, you consent to the collection, transfer, storage disclosure, and use of your Personal Information in the manner set out in this Privacy Policy. If you do not consent to the use of your Personal Information in these ways, please stop using the Services if you don't whish to customize the template for your project.</p>
+                        <h3>Contact Us</h3>
+                        <p>If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me at suppdevapubs@gmail.com.</p>
                     </div> <!-- end of text-container -->
                     
                     <div class="text-container last">
-                        <h3>Assets Used In The Live Preview Content</h3>
-                        <p>Sync Landing Page uses tracking technology on the landing page, in the Applications, and in the Platforms, including mobile application identifiers and a unique Hootsuite user ID to help us recognize you across different Services, to monitor usage and web traffic routing for the Services, and to customize and improve the Services. By visiting Sync or using the Services you agree to the use of cookies in your browser and HTML-based emails. Cookies are small text files placed on your device when you visit a <a href="#your-link">web site</a> in order to track use of the site and to improve your user experience.</p>
                         <a class="btn-solid-reg" href="index.html">BACK</a>
                     </div> <!-- end of text-container -->
                 </div>
@@ -283,7 +262,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Sync - Free Mobile App Landing Page HTML Template by <a href="https://landingrepo.com">Landingrepo</a></p>
+                    <p class="p-small">Copyright © iCPNS - Mobile App [Template by <a href="https://landingrepo.com">Landingrepo]</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
