--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <!-- end of dropdown menu -->
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm page-scroll" href="#download">DOWNLOAD</a>
+                    <a class="btn-outline-sm page-scroll" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns">DOWNLOAD</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -102,8 +102,8 @@
                     <div class="text-container">
                         <h1>iCPNS Mobile App</h1>
                         <p class="p-large p-heading">Start focusing on your goals and get more things done with Sync mobile application. It's the first app to harness the power of social connections to help you stay focused and get organized</p>
-                        <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a>
-                        <a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>DOWNLOAD</a>
+                        <!-- <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a> -->
+                        <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns"><i class="fab fa-google-play"></i>DOWNLOAD</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -142,11 +142,11 @@
                     
                     <!-- Card -->
                     <div class="card">
-                        <div class="card-image">
-                            <i class="fas fa-users"></i>
+                        <div class="card-image red">
+                            <i class="fas fa-bell"></i>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Identify Goals</h5>
+                            <h5 class="card-title">Get Latest CPNS Info</h5>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -154,32 +154,10 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image green">
-                            <i class="fas fa-code"></i>
+                           <i class="fas fa-spell-check"></i>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Situation Analysis</h5>
-                        </div>
-                    </div>
-                    <!-- end of card -->
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="card-image red">
-                            <i class="fas fa-cog"></i>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Tasks Settings</h5>
-                        </div>
-                    </div>
-                    <!-- end of card -->
-
-                    <!-- Card -->
-                    <div class="card">
-                        <div class="card-image yellow">
-                            <i class="fas fa-comments"></i>
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Social Interaction</h5>
+                            <h5 class="card-title">Simulation Test (Upcoming)</h5>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -187,10 +165,32 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image blue">
-                            <i class="fas fa-rocket"></i>
+                            <i class="fas fa-building"></i>
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title">Get Things Done</h5>
+                            <h5 class="card-title">Info Institutions</h5>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <i class="fas fa-bullhorn"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">CPNS Progress Reminder</h5>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                        <div class="card-image yellow">
+                            <i class="fas fa-exclamation"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Tips And Trick</h5>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -620,17 +620,17 @@
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="image-container">
                         <img class="img-fluid" src="images/customer-logo-1.png" alt="alternative">
                         <img class="img-fluid" src="images/customer-logo-2.png" alt="alternative">
                         <img class="img-fluid" src="images/customer-logo-3.png" alt="alternative">
                         <img class="img-fluid" src="images/customer-logo-4.png" alt="alternative">
-                        <img class="img-fluid" src="images/customer-logo-5.png" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                        <img class="img-fluid" src="images/customer-logo-5.png" alt="alternative"> -->
+                    <!-- </div> --> <!-- end of image-container -->
+                <!-- </div> --> <!-- end of col -->
+            <!-- </div> --> <!-- end of row -->
             <div class="row">
                 <div class="col-lg-12">
 
@@ -689,29 +689,24 @@
                     <!-- Counter -->
                     <div id="counter">
                         <div class="cell">
-                            <i class="fas fa-users"></i>
-                            <div class="counter-value number-count" data-count="231">1</div>
-                            <p class="counter-info">Happy Users</p>
+                            <i class="fas fa-star yellow"></i>
+                            <div class="counter-value">5.0</div>
+                            <p class="counter-info">Our Rating</p>
                         </div>
                         <div class="cell">
-                            <i class="fas fa-code green"></i>
-                            <div class="counter-value number-count" data-count="385">1</div>
-                            <p class="counter-info">Issues Solved</p>
+                            <i class="fas fa-cloud-download-alt green"></i>
+                            <div class="counter-value">10M+</div>
+                            <p class="counter-info">Total Downloads</p>
                         </div>
                         <div class="cell">
-                            <i class="fas fa-cog red"></i>
-                            <div class="counter-value number-count" data-count="159">1</div>
+                            <i class="fas fa-grin-hearts red"></i>
+                            <div class="counter-value">200</div>
                             <p class="counter-info">Good Reviews</p>
                         </div>
                         <div class="cell">
-                            <i class="fas fa-comments yellow"></i>
-                            <div class="counter-value number-count" data-count="127">1</div>
-                            <p class="counter-info">Case Studies</p>
-                        </div>
-                        <div class="cell">
-                            <i class="fas fa-rocket blue"></i>
-                            <div class="counter-value number-count" data-count="211">1</div>
-                            <p class="counter-info">Orders Received</p>
+                            <i class="fas fa-hdd"></i>
+                            <div class="counter-value">30MB</div>
+                            <p class="counter-info">Small Size</p>
                         </div>
                     </div>
                     <!-- end of counter -->
@@ -732,8 +727,8 @@
                         <img class="img-fluid" src="images/download-iphone.png" alt="alternative">
                     </div> <!-- end of image-container -->
                     <p class="p-large">Do you feel like you're wasting time with small stuff instead of working towards your goals? Start using Sync to organize your time and get a grip on your personal development</p>
-                    <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a>
-                    <a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>DOWNLOAD</a>
+                    <!-- <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a> -->
+                    <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns"><i class="fab fa-google-play"></i>DOWNLOAD</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -762,24 +757,24 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-col first">
-                        <h5>About Sync</h5>
-                        <p class="p-small">Sync is a landing page HTML template built with Bootstrap 4 for presenting mobile apps</p>
+                        <h5>About iCPNS</h5>
+                        <p class="p-small">iCPNS is an Android app which can help users to get detail information about CPNS 2019-2020</p>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h5>Contact Info</h5>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <div class="media-body">22 Innovation Street, CA, US</div>
+                                <div class="media-body">Jakarta, Indonesia</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
-                                <div class="media-body"><a href="#your-link">office@syncmobile.com</a></div>
+                                <div class="media-body"><a href="mailto:suppdevapubs@gmail.com">suppdevapubs@gmail.com</a></div>
                             </li>
-                            <li class="media">
+                            <!-- <li class="media">
                                 <i class="fas fa-phone-alt"></i>
                                 <div class="media-body"><a href="#your-link">+44 376 945 23</a></div>
-                            </li>
+                            </li> -->
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third">
@@ -787,17 +782,16 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="terms-conditions.html">Terms & Conditions</a></li>
                             <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="article-details.html">Article Details</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
-                    <div class="footer-col fourth">
+                    <!-- <div class="footer-col fourth">
                         <h5>Other Apps</h5>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="#your-link">Scientific Calculator</a></li>
                             <li><a href="#your-link">Advanced Timer</a></li>
                             <li><a href="#your-link">Music Store</a></li>
                         </ul>
-                    </div> <!-- end of footer-col -->
+                    </div> --> <!-- end of footer-col -->
                     <div class="footer-col fifth">
                         <span class="fa-stack">
                             <a href="#your-link">
