--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -87,7 +87,7 @@
 
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm page-scroll" href="#download">DOWNLOAD</a>
+                    <a class="btn-outline-sm page-scroll" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns">DOWNLOAD</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -188,24 +188,24 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-col first">
-                        <h5>About Sync</h5>
-                        <p class="p-small">Sync is a landing page HTML template built with Bootstrap 4 for presenting mobile apps</p>
+                        <h5>About iCPNS</h5>
+                        <p class="p-small">iCPNS is an Android app which can help users to get detail information about CPNS 2019-2020</p>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col second">
                         <h5>Contact Info</h5>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <div class="media-body">22 Innovation Street, CA, US</div>
+                                <div class="media-body">Jakarta, Indonesia</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
-                                <div class="media-body"><a href="#your-link">office@syncmobile.com</a></div>
+                                <div class="media-body"><a href="mailto:suppdevapubs@gmail.com">suppdevapubs@gmail.com</a></div>
                             </li>
-                            <li class="media">
+                            <!-- <li class="media">
                                 <i class="fas fa-phone-alt"></i>
                                 <div class="media-body"><a href="#your-link">+44 376 945 23</a></div>
-                            </li>
+                            </li> -->
                         </ul>
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third">
@@ -213,17 +213,16 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="terms-conditions.html">Terms & Conditions</a></li>
                             <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                            <li><a href="article-details.html">Article Details</a></li>
                         </ul>
                     </div> <!-- end of footer-col -->
-                    <div class="footer-col fourth">
+                    <!-- <div class="footer-col fourth">
                         <h5>Other Apps</h5>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li><a href="#your-link">Scientific Calculator</a></li>
                             <li><a href="#your-link">Advanced Timer</a></li>
                             <li><a href="#your-link">Music Store</a></li>
                         </ul>
-                    </div> <!-- end of footer-col -->
+                    </div> --> <!-- end of footer-col -->
                     <div class="footer-col fifth">
                         <span class="fa-stack">
                             <a href="#your-link">
