--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Webpage Title -->
-    <title>Terms Conditions - Sync</title>
+    <title>iCPNS - Terms Conditions</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
