--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <div class="col-lg-12">
                     <div class="text-container">
                         <h1>iCPNS Mobile App</h1>
-                        <p class="p-large p-heading">Start focusing on your goals and get more things done with Sync mobile application. It's the first app to harness the power of social connections to help you stay focused and get organized</p>
+                        <p class="p-large p-heading">Preparing for the CPNS Recruitment has never been this easier</p>
                         <!-- <a class="btn-solid-lg" href="#your-link"><i class="fab fa-apple"></i>DOWNLOAD</a> -->
-                        <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns"><i class="fab fa-google-play"></i>DOWNLOAD</a>
+                        <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=id.devapubs.icpns"><i class="fab fa-google-play"></i>DOWNLOAD NOW</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -213,20 +213,20 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Organize Your Time And Start Getting Results</h2>
-                        <p>Sync is the first mobile app on the market to harness the power of social connections to help you stop procrastinating and start getting things done. Give it a try and see the changes right away</p>
+                        <h2>Face The CPNS Recruitment At Ease</h2>        
+                        <p>iCPNS is the first mobile app on the market that will help you prepare for CPNS recruitment and never let you miss the latest information about that</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Analyse and evaluate your current status and productivity</div>
+                                <div class="media-body">Computer Assist Test (CAT) Simulation with 1000+ Questions</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Begin monitoring your day to day routine with Sync app</div>
+                                <div class="media-body">Stay alert about CPNS recruitment info anywhere and anytime</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">See the improved results in no more than a couple of weeks</div>
+                                <div class="media-body">Compete with others to be the top of CAT Simulation Leaderboard</div>
                             </li>
                         </ul>
                         <a class="btn-solid-reg popup-with-move-anim" href="#description-1-details-lightbox">LIGHTBOX</a>
@@ -424,20 +424,20 @@
                         <li class="media">
                             <span class="fa-stack">
                                 <i class="fas fa-circle fa-stack-2x yellow"></i>
-                                <i class="fas fa-comments fa-stack-1x"></i>
+                                <i class="fas fa-trophy fa-stack-1x"></i>
                             </span>
                             <div class="media-body">
-                                <h4>Social Interaction</h4>
+                                <h4>Challenge Yourself</h4>
                                 <p>Schedule your appointments, meetings and periodical evaluations using the tools</p>
                             </div>
                         </li>
                         <li class="media">
                             <span class="fa-stack">
                                 <i class="fas fa-circle fa-stack-2x blue"></i>
-                                <i class="fas fa-rocket fa-stack-1x"></i>
+                                <i class="fas fa-spell-check fa-stack-1x"></i>
                             </span>
                             <div class="media-body">
-                                <h4>Get Things Done</h4>
+                                <h4>Try The Simulation Test Anywhere</h4>
                                 <p>Reading focus mode for long form articles, ebooks and other materials with long text</p>
                             </div>
                         </li>
@@ -569,18 +569,18 @@
 
 
     <!-- Testimonials -->
-    <div class="cards-2">
+    <!-- <div class="cards-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>User Testimonials</h2>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
+                    <h2>User Testimonials</h2> -->
+                <!-- </div> --> <!-- end of col -->
+            <!-- </div> --> <!-- end of row -->
+            <!-- <div class="row">
+                <div class="col-lg-12"> -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -589,11 +589,11 @@
                             <div class="testimonial-text">I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</div>
                             <div class="testimonial-author">Rick Jones - Designer</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -602,11 +602,11 @@
                             <div class="testimonial-text">After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</div>
                             <div class="testimonial-author">Lynda Marquez - Developer</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                   <!--  <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -615,11 +615,11 @@
                             <div class="testimonial-text">Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</div>
                             <div class="testimonial-author">Jay Frisco - Marketer</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                <!-- </div> --> <!-- end of col -->
+            <!-- </div> --> <!-- end of row -->
             <!-- <div class="row">
                 <div class="col-lg-12">
                     <div class="image-container">
@@ -631,11 +631,11 @@
                     <!-- </div> --> <!-- end of image-container -->
                 <!-- </div> --> <!-- end of col -->
             <!-- </div> --> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
+            <!-- <div class="row">
+                <div class="col-lg-12"> -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -644,11 +644,11 @@
                             <div class="testimonial-text">I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</div>
                             <div class="testimonial-author">Frank Gibson - Manager</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -657,11 +657,11 @@
                             <div class="testimonial-text">If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</div>
                             <div class="testimonial-author">Rita Longmile - Designer</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="card-image">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                             <hr class="testimonial-line">
@@ -670,7 +670,7 @@
                             <div class="testimonial-text">I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's beeen working great</div>
                             <div class="testimonial-author">Jones Smith - Developer</div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                 </div> <!-- end of col -->
@@ -681,13 +681,13 @@
 
 
     <!-- Statistics -->
-    <div class="counter">
+    <!-- <div class="counter">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12"> -->
                     
                     <!-- Counter -->
-                    <div id="counter">
+                    <!-- <div id="counter">
                         <div class="cell">
                             <i class="fas fa-star yellow"></i>
                             <div class="counter-value">5.0</div>
@@ -708,13 +708,13 @@
                             <div class="counter-value">30MB</div>
                             <p class="counter-info">Small Size</p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of counter -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of counter -->
+                <!-- </div> --> <!-- end of col -->
+            <!-- </div> --> <!-- end of row -->
+        <!-- </div> --> <!-- end of container -->
+    <!-- </div> --> <!-- end of counter -->
     <!-- end of statistics -->
 
 
